force-app/main/default/objects/Naloxone_Report__c/Naloxone_Report__c.object-meta.xml
<CustomObject>
    <label>Naloxone Report</label>
    <nameField>
        <displayFormat>NR-{0}</displayFormat>
        <label>Naloxone Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Naloxone Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>