force-app/main/default/objects/Naloxone_Report__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>Funding_Award__c</referenceTo>
    <relationshipLabel>Naloxone Reports</relationshipLabel>
    <relationshipName>Naloxone_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>