force-app/main/default/objects/Naloxone_Report__c/fields/NumberOfBoxesDistributed__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBoxesDistributed__c</fullName>
    <label>Number of Boxes Distributed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>